--- a/Lab-2/index.html
+++ b/Lab-2/index.html
@@ -41,10 +41,10 @@
             margin-bottom: 16px;
         }
         .avatar {
-            margin: 0 auto;
+            margin: 15px auto;
             margin-bottom: 10px;
-            width: 170px;
-            height: 1px;
+            width: 100px;
+            height: 100px;
             background: #e9ecf6;
             border-radius: 50%;
             display: flex;
@@ -138,9 +138,9 @@
         <section id="about" class="section">
             <h2>About Me</h2>
             <div class="avatar">
-                <img src="WhatsApp Image 2025-10-06 at 21.05.08_d84f2093.jpg" alt="Avatar">
+                <img src="WhatsApp Image 2025-10-03 at 18.54.31_fe068ab5 tushit.jpg" alt="Avatar">
             </div>
-            <p>Hello! My name is Shubham. I am learning web development and this is my first portfolio website.</p>
+            <p>Hello! My name is Tushit Saini. I am learning web development and this is my first portfolio website.</p>
         </section>
         <section id="skills" class="section">
             <h2>My Skills</h2>
